Fix modal width on mobile

--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@
 
 body{
     min-height: 100vh;
+    max-width: 100vw;
     display: grid;
     grid-template-rows: auto 1fr auto;
 }
@@ -112,7 +113,7 @@ body{
 }
 
 .modal-content{
-    width: 50vw;
+    width: max(400px, 30vw);
     display: flex;
     flex-direction: column;
     background-color: var(--light-pink);
